# prosody

./: .dockerignore  .gitignore  AGENTS.md  GEMINI.md  README.md  package-lock.json  package.json  repo_structure.md  tsconfig.base.json
.github/workflows/: ci.yml  deploy-agent.yml  deploy-web.yml
apps/agent/: .env.example  Dockerfile  README.md  pyproject.toml
apps/agent/app/: __init__.py  auth.py  config.py  logging_utils.py  main.py  models.py  resilience.py  webrtc_diagnostics.py
apps/agent/app/api/: __init__.py  generation.py  routes.py
apps/agent/app/metrics/: __init__.py  latency.py
apps/agent/app/orchestrator/: __init__.py  pipeline.py
apps/agent/app/providers/: __init__.py  asr.py  base.py  factory.py  llm.py  tts.py
apps/agent/app/replay/: __init__.py  service.py
apps/agent/app/sessions/: __init__.py  manager.py
apps/agent/app/storage/: __init__.py  base.py  local_store.py  sources.py  supabase_store.py
apps/agent/app/transports/: __init__.py  local_webrtc.py
apps/agent/prosody_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/agent/tests/: test_auth.py  test_auth_asymmetric.py  test_health.py  test_local_sessions.py  test_observability.py  test_resilience.py  test_sources_context.py  test_supabase_store.py
apps/web/: .env.example  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
apps/web/src/: App.tsx  app.css  main.tsx  styles.css
infra/: README.md
infra/cloudrun/: README.md  deploy-agent.sh  deploy-web.sh
infra/daily/: README.md
infra/supabase/: README.md
scripts/: enable_pipecat_repro_trace.py
(+28 files in other folders)
